2004-03-30  Mike Kestner  <mkestner@ximian.com>

	* gtk/Makefile.am : add the customs that miggie didn't add.

2004-03-30  Mike Kestner  <mkestner@ximian.com>

	* rsvg/Makefile.am : apply metadata to api
	* rsvg/Rsvg.metadata : mark an array param

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* sample/Makefile.am: small resource build fix for glade-test.exe

2004-03-25  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : Widget.Events is a Gdk.EventMask, not int
	* sample/GtkDemo/DemoDrawingArea.cs : remove int casts
	* sample/Scribble.cs : remove int casts

2003-03-24  John Luke  <jluke@cfl.rr.com>

	* samples/gconf/Makefile.am:
	changes SOURCES to FILES to make automake 1.8 happy

2003-03-24  Jorn Baayen  <jorn@nl.linux.org>

	* gtk/Gtk.metadata : mark null_ok param on Window.SetTransientFor.

2003-03-24  Jorn Baayen  <jorn@nl.linux.org>

	* gdk/Gdk.metadata : mark out param on Screen.GetMonitorGeometry.

2004-03-22  Mike Kestner  <mkestner@ximian.com>

	* gtk/Window.custom : bring back the DefaultSize prop as a
	Gdk.Size.

2004-03-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: if no C# compiler found, error out.

2004-03-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Makefile.am : generate glue
	* gdk/glue/Makefile.am : build generated glue
	* gdk/glue/makefile.win32 : build generated glue
	* gdk/glue/vmglueheaders.h : includes for vm glue
	* gtk/Makefile.am : generate glue
	* gtk/glue/Makefile.am : build generated glue
	* gtk/glue/makefile.win32 : build generated glue
	* gtk/glue/vmglueheaders.h : includes for vm glue

2004-03-18  Mike Kestner  <mkestner@ximian.com>

	* configure.in : expand atk/glue/Makefile
	* atk/Makefile.am : generate glue and build glue dir
	* atk/makefile.win32 : ditto
	* atk/glue/Makefile.am : build new glue
	* atk/glue/makefile.win32 : build new glue
	* atk/glue/vmglueheaders.h : new includes for vm glue
	* atk/glue/win32dll.c : win dll building code
	* generator/CodeGenerator.cs : add --gluelib-name and 