@@ -83,6 +83,17 @@ fi
 AC_SUBST(RUNTIME)
 AC_SUBST(CSC)
 
+MONODOC_REQUIRED_VERSION=0.12
+PKG_CHECK_MODULES(MONODOC_DEPENDENCY, monodoc >= $MONODOC_REQUIRED_VERSION, enable_monodoc=yes, enable_monodoc=no)
+
+if test "x$enable_monodoc" = "xyes"; then
+	AC_PATH_PROG(MONODOC, monodoc, no)
+else
+	MONODOC=
+fi
+
+AC_SUBST(MONODOC)
+
 PKG_CHECK_MODULES(GLIB, glib-2.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
@@ -158,6 +169,7 @@ AM_CONDITIONAL(ENABLE_GNOMEDB, test "x$enable_gnomedb" = "xyes")
 AM_CONDITIONAL(ENABLE_RSVG, test "x$enable_rsvg" = "xyes")
 AM_CONDITIONAL(ENABLE_GTKHTML, test "x$enable_gtkhtml" = "xyes")
 AM_CONDITIONAL(ENABLE_VTE, test "x$enable_vte" = "xyes")
+AM_CONDITIONAL(ENABLE_MONODOC, test "x$enable_monodoc" = "xyes")
 
 
 AC_SUBST(CFLAGS)
@@ -193,6 +205,7 @@ gconf/tools/gconfsharp-schemagen
 gtkhtml/Makefile
 rsvg/Makefile
 vte/Makefile
+doc/Makefile
 sample/GtkDemo/Makefile
 sample/Makefile
 sample/gconf/Makefile
@@ -210,6 +223,7 @@ echo "Configuration summary"
 echo ""
 echo "   * Installation prefix = $prefix"
 echo "   * $CS compiler: $CSC"
+echo "   * Documentation: $enable_monodoc ($MONODOC)"
 echo ""
 echo "   Optional assemblies included in the build:"
 echo ""
