@@ -1,3 +1,5 @@
+Makefile
+Makefile.in
 gtk-sharp-docs.zip
 gtk-sharp-docs.tree
 tmp
