@@ -1,3 +1,11 @@
+2004-03-30  John Luke  <jluke@cfl.rr.com>
+
+	[Reworked a bit by MK]
+	* Makefile.am : add doc dir
+	* configure.in : test for monodoc, expand doc/Makefile
+	* doc/Makefile.am : build and dist docs
+	* doc/makefile : kill
+
 2004-03-30  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/Makefile.am : add the customs that miggie didn't add.
